/*
 * Tencent is pleased to support the open source community by making Angel available.
 *
 * Copyright (C) 2017 THL A29 Limited, a Tencent company. All rights reserved.
 *
 * Licensed under the BSD 3-Clause License (the "License"); you may not use this file except in
 * compliance with the License. You may obtain a copy of the License at
 *
 * https://opensource.org/licenses/BSD-3-Clause
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is
 * distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
 * either express or implied. See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "com.tencent.angel.protobuf.generated";

option java_outer_classname = "ClientServingServiceProtos";

option java_generate_equals_and_hash = true;

option java_generic_services = true;

option optimize_for = SPEED;

import "ML.proto";
import "Serving.proto";


message RegisterModelRequestProto {
  required ModelDefinitionProto model = 1;
  required string shardingModelClass = 2;
}

message UnregisterModelRequestProto {
  required string model = 1;
}

message LocationRequestProto {
}

message LocationResponseProto {
  repeated ModelLocationProto modelLocationList = 1;
}

message ModelSplitLocationProto {
  required int32 index = 1;
  repeated ServingLocationProto locationList = 2;
}

message ModelLocationProto {
  required string model = 1;
  repeated ModelSplitLocationProto splitLocationList = 2;
}

message ModelNamesProto {
  repeated string modelNames = 1;
}


service ClientServingService {
  rpc registerModel (RegisterModelRequestProto) returns (CommonResponseProto);
  rpc unregisterModel (UnregisterModelRequestProto) returns (CommonResponseProto);
  rpc getLocations (LocationRequestProto) returns (LocationResponseProto);
}







