option java_package = "com.tencent.angel.protobuf.generated";

option java_outer_classname = "ServingProtos";

option java_generate_equals_and_hash = true;

option java_generic_services = true;

option optimize_for = SPEED;

import "ML.proto";


message CommonResponseProto {
  optional bool seemSucess = 1;
}

message CommonRequestProto {

}

message MatrixMetaInfoProto {
  required string name = 1;
  required int32 rowType = 2;
  required int32 rowNum = 3;
  required int64 dimension = 4;

}

message ModelDefinitionProto {
  required string name = 1;
  required string dir = 2;
  required int32 replica = 3;
  required int32 concurrent = 4;
  repeated MatrixMetaInfoProto matrixMetas = 5;
  repeated ModelSplitProto modelSplits = 6;
}


message ServingLocationProto {
  required string ip = 1;
  required int32 port = 2;
}

message ModelSplitProto {
  required int32 index = 1;
  repeated MatrixSplitProto splits = 2;
}

message MatrixSplitProto {
  required string name = 1;
  required int32 index = 2;
  required int32 rowOffset = 3;
  required int32 rowNum = 4;
  required int64 columnOffset = 5;
  required int64 dimension = 6;
}
